--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit
-pandas
-numpy
-plotly
-supabase
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.14.0
+supabase>=2.0.0
+python-dotenv>=1.0.0
+matplotlib>=3.7.0  
